# scaler-ml

./: .gitignore  DEPLOYMENT.md  Dockerfile  HF_SPACE_SETUP.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py
server/: __init__.py  app.py
src/: __init__.py  environment.py  graders.py  models.py
