[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "Real-world data cleaning and validation environment for training AI agents"
authors = [{name = "OpenEnv Community"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai>=2.7.2",
    "pandas",
    "numpy",
    "openenv-core",
    "python-multipart",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["src", "server"]
